# moccet_technical_challenge

./: .env.example  .gitignore  README.md  methodology.docx  methodology.md  pyproject.toml  requirements.txt
config/: agent_weights.yaml  agents.yaml
dashboard/: README.md  app.py
deliverables/: Framework_Writeup.docx  README.md  golden_answers.csv  llm_judge.py  reliability_report.json  runner.py  scorer.py  scores.csv
docs/: llm_judge_cost.docx  llm_judge_cost.md  llm_judge_prompt.docx  llm_judge_prompt.md
outputs/: eval_results_run1.json  eval_results_run2.json  eval_results_run3.json  reliability_report.json
prompts/: mock_responses.yaml  mock_responses_bad.yaml  test_suite.yaml
scripts/: docs_to_docx.py  export_methodology_doc.py  generate_golden.py  run_eval.py  run_reliability.py
src/: __init__.py  golden.py  llm_judge.py  reliability.py  response_provider.py  rubric.py
